# localrepo-server

./: README.md  pyproject.toml
localrepo_server/: __main__.py  database.py  server.py
