[tool.poetry]
name = "localrepo-server"
version = "3.3.3"
description = "Web interface for localrepo. A fork of falocalrepo-server"
authors = ["The Solipsis Project <the.solipsis.project@gmail.com>", "Matteo Campinoti <matteo.campinoti94@gmail.com>"]
license = "EUPL-1.2"
readme = "README.md"
homepage = "https://github.com/solipsis-project/localrepo-server"
repository = "https://github.com/solipsis-project/localrepo-server"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
]

[tool.poetry.urls]
"Source" = "https://github.com/solipsis-project/localrepo-server"
"Changelog" = "https://github.com/solipsis-project/localrepo-server/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/solipsis-project/localrepo-server/issues"

[tool.poetry.scripts]
falocalrepo-server = "falocalrepo_server.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
localrepo-database = "~5.4.3"
chardet = "^5.0.0"
pillow = "^9.3.0"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
Jinja2 = "^3.1.2"
click = "^8.1.3"
click-help-colors = "^0.9.1"
htmlmin = "^0.1.12"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
bbcode = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
